Add Access-Control-Max-Age: 180 to all OPTION calls

--- a/etc/confd/templates/swagger.yaml.tmpl
+++ b/etc/confd/templates/swagger.yaml.tmpl
@@ -77,11 +77,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -162,11 +165,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -247,11 +253,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -345,11 +354,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -402,11 +414,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -566,11 +581,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,DELETE,POST,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -630,11 +648,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -725,11 +746,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token,X-Api-Total,X-Api-Count,X-Api-Current,X-Api-Next,X-Api-Pages,X-Api-Per-Page,X-Api-Previous'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -818,11 +842,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token,X-Api-Total,X-Api-Count,X-Api-Current,X-Api-Next,X-Api-Pages,X-Api-Per-Page,X-Api-Previous'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -883,11 +910,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -956,11 +986,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1027,11 +1060,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1098,11 +1134,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1180,11 +1219,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1245,11 +1287,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1307,11 +1352,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1369,11 +1417,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1431,11 +1482,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1510,11 +1564,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1582,11 +1639,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1799,11 +1859,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT,POST,DELETE'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -1892,11 +1955,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -2091,11 +2157,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,PUT,POST,DELETE'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -2184,11 +2253,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -2244,11 +2316,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
@@ -2297,11 +2372,14 @@ paths:
               type: "string"
             Access-Control-Allow-Headers:
               type: "string"
+            Access-Control-Max-Age:
+              type: "string"
       x-amazon-apigateway-integration:
         responses:
           default:
             statusCode: "200"
             responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
               method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
