/fx/symbols and username in /user

--- a/etc/confd/templates/swagger.yaml.tmpl
+++ b/etc/confd/templates/swagger.yaml.tmpl
@@ -24,6 +24,8 @@ paths:
             properties:
               identity:
                 type: string
+              username:
+                type: string
               token:
                 type: string
               expires:
@@ -200,6 +202,8 @@ paths:
             properties:
               identity:
                 type: string
+              username:
+                type: string
               token:
                 type: string
               expires:
@@ -289,6 +293,8 @@ paths:
           schema:
             properties:
               identity:
+                type: string
+              username:
                 type: string
               token:
                 type: string
@@ -2351,6 +2357,62 @@ paths:
         type: http
         httpMethod: get
         uri: {{getenv "HTTP_PROTOCOL"}}://fx-api.{{getenv "HOSTED_ZONE"}}/
+        requestTemplates:
+          application/json:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json:
+    options:
+      parameters: []
+      responses:
+        200:
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Max-Age:
+              type: "string"
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Max-Age: "'180'"
+              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-User-Agent,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            responseTemplates:
+              application/json: "__passthrough__"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        type: "mock"
+  /fx/symbols:
+    get:
+      description: |
+        Get Currency Symbols
+      responses:
+        '200':
+          description: Successful response
+          schema:
+            properties:
+              type: object
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+      x-amazon-apigateway-auth:
+        type: none
+      x-amazon-apigateway-integration:
+        type: http
+        httpMethod: get
+        uri: {{getenv "HTTP_PROTOCOL"}}://fx-api.{{getenv "HOSTED_ZONE"}}/symbols
         requestTemplates:
           application/json:
         responses:
